<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.openpkw</groupId>
    <artifactId>openpkw</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <modules>
        <module>openpkw-model</module>
        <module>openpkw-repositories</module>
        <module>openpkw-services</module>
        <module>openpkw-rest</module>
        <module>openpkw-test</module>
    </modules>
    <packaging>pom</packaging>
    <name>openpkw</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring.version>5.2.5.RELEASE</spring.version>
        <spring.security.version>5.3.1.RELEASE</spring.security.version>
        <springbatch.version>4.2.2.RELEASE</springbatch.version>
        <org.slf4j-version>1.7.30</org.slf4j-version>
        <spring.data.version>1.11.23.RELEASE</spring.data.version>
        <wildfly.plugin.version>2.0.2.Final</wildfly.plugin.version>
        <hibernate.version>5.4.13.Final</hibernate.version>
		<commons-dbcp.version>2.7.0</commons-dbcp.version>
        <jackson.version>2.10.3</jackson.version>
	<target.server.url>http://rumcajs.openpkw.pl:9080/openpkw</target.server.url>
    </properties>


    <profiles>
        <profile>
            <id>LOCAL</id>
            <activation>
                <property>
                    <name>openpkw-env</name>
                    <value>local</value>
                </property>
            </activation>
            <properties>
                <wildfly.management.host>localhost</wildfly.management.host>
                <wildfly.management.port>9999</wildfly.management.port>
                <wildfly.management.user>jenkins</wildfly.management.user>
                <wildfly.management.password></wildfly.management.password>
                <target.server.url>http://${wildfly.management.host}:8080/openpkw</target.server.url>
            </properties>
        </profile>
        <profile>
            <id>VAGRANT</id>
            <activation>
                <property>
                    <name>openpkw-env</name>
                    <value>vagrant</value>
                </property>
            </activation>
            <properties>
                <wildfly.management.host>localhost</wildfly.management.host>
                <wildfly.management.port>4501</wildfly.management.port>
                <wildfly.management.user>jenkins</wildfly.management.user>
                <wildfly.management.password></wildfly.management.password>
                <target.server.url>http://${wildfly.management.host}:4500/openpkw</target.server.url>
            </properties>
        </profile>
        <profile>
            <id>TEST</id>
            <activation>
                <property>
                    <name>openpkw-env</name>
                    <value>test</value>
                </property>
            </activation>
            <properties>
                <wildfly.management.host>rumcajs.openpkw.pl</wildfly.management.host>
                <wildfly.management.port>9999</wildfly.management.port>
                <wildfly.management.user>jenkins</wildfly.management.user>
                <wildfly.management.password></wildfly.management.password>
                <target.server.url>http://${wildfly.management.host}:9080/openpkw</target.server.url>
            </properties>
        </profile>
        <profile>
            <id>UAT</id>
            <activation>
                <property>
                    <name>openpkw-env</name>
                    <value>uat</value>
                </property>
            </activation>
            <properties>
                <wildfly.management.host>dobromir.openpkw.pl</wildfly.management.host>
                <wildfly.management.port>9999</wildfly.management.port>
                <wildfly.management.user>jenkins</wildfly.management.user>
                <wildfly.management.password></wildfly.management.password>
                <target.server.url>http://${wildfly.management.host}:9080/openpkw</target.server.url>
            </properties>
        </profile>
    </profiles>


    <dependencyManagement>
        <dependencies>
            <!-- jee dependencies -->
            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-api</artifactId>
                <version>7.0</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-entitymanager</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <!-- Spring dependencies -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-orm</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-jpa</artifactId>
                <version>${spring.data.version}</version>
            </dependency>

            <!-- Spring Batch -->
            <dependency>
                <groupId>org.springframework.batch</groupId>
                <artifactId>spring-batch-core</artifactId>
                <version>${springbatch.version}</version>
            </dependency>

            <!-- Spring Security -->
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-web</artifactId>
                <version>${spring.security.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-config</artifactId>
                <version>${spring.security.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-oauth2-core</artifactId>
                <version>${spring.security.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-oauth2-jose</artifactId>
                <version>${spring.security.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-oauth2-resource-server</artifactId>
                <version>${spring.security.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.4</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk15on</artifactId>
                <version>1.64</version>
            </dependency>

            <!--JDBC -->
            <dependency>
                <groupId>com.mchange</groupId>
                <artifactId>c3p0</artifactId>
                <version>0.9.5.5</version>
            </dependency>

            <!-- Jackson JSON Mapper -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-mapper</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-mapping-asl</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${org.slf4j-version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${org.slf4j-version}</version>

            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.15.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>3.3.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-dbcp2</artifactId>
                <version>${commons-dbcp.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.jayway.jsonpath</groupId>
                <artifactId>json-path</artifactId>
                <version>2.0.0</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>5.1.2.Final</version>
            </dependency>

            <!-- Database for tests-->
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.189</version>
                <scope>test</scope>
            </dependency>

            <!-- Project dependencies -->
            <dependency>
                <groupId>org.openpkw</groupId>
                <artifactId>openpkw-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openpkw</groupId>
                <artifactId>openpkw-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openpkw</groupId>
                <artifactId>openpkw-repositories</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openpkw</groupId>
                <artifactId>openpkw-services</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openpkw</groupId>
                <artifactId>openpkw-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.spockframework</groupId>
            <artifactId>spock-core</artifactId>
            <version>2.0-M2-groovy-3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.spockframework</groupId>
            <artifactId>spock-spring</artifactId>
            <version>2.0-M2-groovy-3.0</version>
        </dependency>
        <dependency> <!-- enables mocking of classes without default constructor (together with CGLIB) -->
            <groupId>org.objenesis</groupId>
            <artifactId>objenesis</artifactId>
            <version>3.1</version>
            <scope>test</scope>
        </dependency>
        <dependency> <!-- only required if Hamcrest matchers are used -->
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wildfly.plugins</groupId>
            <artifactId>wildfly-maven-plugin</artifactId>
            <version>${wildfly.plugin.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>sun.jdk</groupId>
                    <artifactId>jconsole</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>13</source>
                    <target>13</target>
                    <compilerArgs>
                        --enable-preview
                    </compilerArgs>
                    <compilerArgument>-Xlint:deprecation</compilerArgument>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
            <plugin>
                <!-- The gmavenplus plugin is used to compile Groovy code. To learn more about this plugin,
                visit https://github.com/groovy/GMavenPlus/wiki -->
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <version>1.8.1</version>
                <configuration>
                    <previewFeatures>true</previewFeatures>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>compileTests</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                    <includes>
                        <include>**/When*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Spec.java</include>
                        <include>**/*Spec.groovy</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>${wildfly.plugin.version}</version>
                <configuration>
                    <hostname>${wildfly.management.host}</hostname>
                    <port>${wildfly.management.port}</port>
                    <username>${wildfly.management.user}</username>
                    <password>${wildfly.management.password}</password>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.22.2</version>
                    <executions>
                        <execution>
                            <id>integration-test</id>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <pluginRepositories>
        <pluginRepository>
            <id>JBoss Repository</id>
            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
        </pluginRepository>
    </pluginRepositories>

</project>
